--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -35,10 +35,13 @@
     <ClCompile Include="ebisusdk\EbisuSDK.cpp" />
     <ClCompile Include="engine\baseclient.cpp" />
     <ClCompile Include="engine\baseclientstate.cpp" />
+    <ClCompile Include="engine\cl_rcon.cpp" />
     <ClCompile Include="engine\host_cmd.cpp" />
     <ClCompile Include="engine\host_state.cpp" />
+    <ClCompile Include="engine\net.cpp" />
     <ClCompile Include="engine\net_chan.cpp" />
     <ClCompile Include="engine\sv_main.cpp" />
+    <ClCompile Include="engine\sv_rcon.cpp" />
     <ClCompile Include="engine\sys_dll.cpp" />
     <ClCompile Include="engine\sys_dll2.cpp" />
     <ClCompile Include="engine\sys_engine.cpp" />
@@ -51,6 +54,7 @@
     <ClCompile Include="mathlib\bits.cpp" />
     <ClCompile Include="mathlib\crc32.cpp" />
     <ClCompile Include="mathlib\IceKey.cpp" />
+    <ClCompile Include="mathlib\sha256.cpp" />
     <ClCompile Include="networksystem\r5net.cpp" />
     <ClCompile Include="public\bansystem.cpp" />
     <ClCompile Include="public\binstream.cpp" />
@@ -200,6 +204,8 @@
     <ClCompile Include="tier0\completion.cpp" />
     <ClCompile Include="tier0\cvar.cpp" />
     <ClCompile Include="tier0\IConVar.cpp" />
+    <ClCompile Include="tier1\NetAdr2.cpp" />
+    <ClCompile Include="tier2\socketcreator.cpp" />
     <ClCompile Include="vguimatsurface\MatSystemSurface.cpp" />
     <ClCompile Include="vgui\CEngineVGui.cpp" />
     <ClCompile Include="vgui\vgui_fpspanel.cpp" />
@@ -219,6 +225,7 @@
     <ClInclude Include="client\cdll_engine_int.h" />
     <ClInclude Include="client\client.h" />
     <ClInclude Include="client\IVEngineClient.h" />
+    <ClInclude Include="common\igameserverdata.h" />
     <ClInclude Include="common\opcodes.h" />
     <ClInclude Include="common\protocol.h" />
     <ClInclude Include="common\pseudodefs.h" />
@@ -231,11 +238,14 @@
     <ClInclude Include="ebisusdk\EbisuSDK.h" />
     <ClInclude Include="engine\baseclient.h" />
     <ClInclude Include="engine\baseclientstate.h" />
+    <ClInclude Include="engine\cl_rcon.h" />
     <ClInclude Include="engine\debugoverlay.h" />
     <ClInclude Include="engine\host_cmd.h" />
     <ClInclude Include="engine\host_state.h" />
+    <ClInclude Include="engine\net.h" />
     <ClInclude Include="engine\net_chan.h" />
     <ClInclude Include="engine\sv_main.h" />
+    <ClInclude Include="engine\sv_rcon.h" />
     <ClInclude Include="engine\sys_dll.h" />
     <ClInclude Include="engine\sys_dll2.h" />
     <ClInclude Include="engine\sys_engine.h" />
@@ -252,6 +262,8 @@
     <ClInclude Include="mathlib\crc32.h" />
     <ClInclude Include="mathlib\IceKey.H" />
     <ClInclude Include="mathlib\parallel_for.h" />
+    <ClInclude Include="mathlib\sha256.h" />
+    <ClInclude Include="mathlib\swap.h" />
     <ClInclude Include="mathlib\vector.h" />
     <ClInclude Include="milessdk\win64_rrthreads.h" />
     <ClInclude Include="networksystem\r5net.h" />
@@ -417,6 +429,8 @@
     <ClInclude Include="tier0\cvar.h" />
     <ClInclude Include="tier0\IConVar.h" />
     <ClInclude Include="tier0\interface.h" />
+    <ClInclude Include="tier1\NetAdr2.h" />
+    <ClInclude Include="tier2\socketcreator.h" />
     <ClInclude Include="vguimatsurface\MatSystemSurface.h" />
     <ClInclude Include="vgui\CEngineVGui.h" />
     <ClInclude Include="vgui\vgui.h" />
