--- a/r5dev/dedicated.vcxproj.filters
+++ b/r5dev/dedicated.vcxproj.filters
@@ -510,7 +510,7 @@
     <ClInclude Include="tier0\basetypes.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
-    <ClInclude Include="tier0\ConCommand.h">
+    <ClInclude Include="tier0\cmd.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="vpc\IAppSystem.h">
@@ -779,7 +779,7 @@
     <ClCompile Include="tier0\IConVar.cpp">
       <Filter>sdk\tier0</Filter>
     </ClCompile>
-    <ClCompile Include="tier0\ConCommand.cpp">
+    <ClCompile Include="tier0\cmd.cpp">
       <Filter>sdk\tier0</Filter>
     </ClCompile>
     <ClCompile Include="vpc\IAppSystem.cpp">
