RCON improvements (see description)
** SERVER **
* Close redundant connections if max sockets have been reached.
* Ban if client keeps spamming without authing first (ignoring message).
* Check for whitelisted address before issuing bans (whitelisted address in ConVar 'sv_rcon_whitelist_address' will never get banned or get its connection terminated.
* Transmit SQVM and DevMsg logs over the wire to the net console.

** NETCON **
* IPv6 support.
* Close connection properly after FIN request.
* Prompt user to reconnect after connection has been terminated instead of closing the application.
* Add proper quit command.

** SDKLAUNCHER **
* Rename to 'launcher.exe' to describe its purpose better. Our logo gets printed nice and large on the console during startup.

** SDK **
* Cleanup.

--- a/r5dev/netconsole.vcxproj
+++ b/r5dev/netconsole.vcxproj
@@ -25,6 +25,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="core\termutil.cpp" />
     <ClCompile Include="engine\net.cpp" />
     <ClCompile Include="netconsole\netconsole.cpp" />
     <ClCompile Include="public\utility.cpp" />
@@ -33,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\stdafx.h" />
+    <ClInclude Include="core\termutil.h" />
     <ClInclude Include="engine\net.h" />
     <ClInclude Include="netconsole\netconsole.h" />
     <ClInclude Include="tier1\NetAdr2.h" />
